2012-06-22 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Move pickled arg list into share area with sensible name/path (requirements)
    * Improvements to mk-trf-argpickle 

2012-06-21 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Remove unnecessary job options in merging skeletons for HITS and RDO (r17 compatible only)
    * Tagging as PATJobTransforms-00-04-21

2012-06-19 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Adding the NTUP_TAU type to Reco_trf.py for the production
	  system to know about it.
	* Tagging as PATJobTransforms-00-04-20

2012-06-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add outputNTUP_PHYSVALFile as recognised argument in Configuration.py
    * Add d3pdVal, outputNTUP_PHYSVALFile to LODPK in ValidateD3PD_trf and correct typo for --ignoreerrors
    * Improve ValidateD3PD_trf comments
    * Tagging as PATJobTransforms-00-04-19

2012-06-07 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add outputTXT_JIVEXMLTGZFile as recognised argument
    *** Important: From this tag onwards you require PyJobTransformsCore >= 00-09-21 ***
    * Tagging as PATJobTransforms-00-04-18

2012-06-05 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Also add AtlasVersion to the setup info printout

2012-06-02 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Fix for hybrid POOL merger to get correct GUID for merged files and add it to the PFC (MergePool_trf.py)
    * Tagging as PATJobTransforms-00-04-17    

2012-06-01 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Patch ArgDictTools to print setup info and packages from $TestArea
    * Cosmetic improvements to ArgDictTools.py
    * Tagging as PATJobTransforms-00-04-16

2012-05-31 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Fix for hybrid merger (MergePoolJobTransform) to work correctly
      with old mergePOOL.exe, which always has rc=1
    * Remove misleading log message from Merging_trf
    * Tagging as PATJobTransforms-00-04-15
    